Potential layout fix for option menu on mobile

--- a/styles/OptionsModal.module.css
+++ b/styles/OptionsModal.module.css
@@ -1,15 +1,15 @@
 .modal {
   background: #18A0FB;
-  width: 100%;
-  height: 100%;
+  min-width: 100%;
+  min-height: 100%;
 }
 
 .modalOverlay {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  min-width: 100%;
+  min-height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
 }
 
@@ -26,22 +26,22 @@
 
 
 .modalButtonGroup h1 {
- color: white;
- margin: 2rem;
+  color: white;
+  margin: 2rem;
 }
 
 .modalButtonGroup button {
-  background-color: white ; 
-  box-shadow: 0px 4px 5px 0px  rgb(70, 70, 70);
+  background-color: white;
+  box-shadow: 0px 4px 5px 0px rgb(70, 70, 70);
   border: none;
   color: #18A0FB;
   display: block;
   font-size: 1.25rem;
   border-radius: 0.25rem;
-  cursor: pointer; 
+  cursor: pointer;
   max-height: 50%;
 }
 
 .buttongroup button:not(:last-child) {
-  border-bottom: none; 
+  border-bottom: none;
 }
